--- a/contactme.html
+++ b/contactme.html
@@ -171,7 +171,7 @@
     <!-- Right side -->
     <div class="nav-right">
       <!-- Make logo alone handle the click -->
-      <div class="namelogo-right" onclick="window.location.href='/Angelan-Portfolio.html'">
+      <div class="namelogo-right" onclick="window.location.href='/index.html'">
         <img src="logo/name_logo.png" alt="Angelan logo">
       </div>
   
@@ -182,7 +182,7 @@
     <!-- Mobile Menu Toggle -->
     <input type="checkbox" id="menu-toggle" />
     <div class="mobile-menu">
-      <a href="/Angelan-Portfolio.html">Home</a>
+      <a href="/index.html">Home</a>
       <a href="/graphic-design.html">Graphic Design</a>
       <a href="/digital-illustrations.html">Illustrations</a>
       <a href="/video-work.html">Video Work</a>
