--- a/video-work.html
+++ b/video-work.html
@@ -91,7 +91,7 @@
 </head>
 
 <body>
- <!-- Navbar -->
+<!-- Navbar -->
 <nav class="navbar">
   <div class="nav-left">
     <!-- Work Dropdown -->
@@ -111,7 +111,7 @@
   <!-- Right side -->
   <div class="nav-right">
     <!-- Make logo alone handle the click -->
-    <div class="namelogo-right" onclick="window.location.href='/Angelan-Portfolio.html'">
+    <div class="namelogo-right" onclick="window.location.href='/index.html'">
       <img src="logo/name_logo.png" alt="Angelan logo">
     </div>
 
@@ -122,7 +122,7 @@
   <!-- Mobile Menu Toggle -->
   <input type="checkbox" id="menu-toggle" />
   <div class="mobile-menu">
-    <a href="/Angelan-Portfolio.html">Home</a>
+    <a href="/index.html">Home</a>
     <a href="/graphic-design.html">Graphic Design</a>
     <a href="/digital-illustrations.html">Illustrations</a>
     <a href="/video-work.html">Video Work</a>
