--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     </div>
 
     <!-- Contact Me Link -->
-    <a href="/contactme.html" class="nav-btn">Contact Me</a>
+    <a href="contactme.html" class="nav-btn">Contact Me</a>
   </div>
 
   <!-- Right side -->
@@ -218,7 +218,7 @@
     <a href="/graphic-design.html">Graphic Design</a>
     <a href="/digital-illustrations.html">Illustrations</a>
     <a href="/video-work.html">Video Work</a>
-    <a href="/contactme.html">Contact Me</a>
+    <a href="contactme.html">Contact Me</a>
   </div>
 </nav>
 
