--- a/index.html
+++ b/index.html
@@ -190,9 +190,9 @@
     <div class="dropdown">
       <button class="dropbtn">Work</button>
       <div class="dropdown-content">
-        <a href="/graphic-design.html">Graphic Design</a>
-        <a href="/digital-illustrations.html">Illustrations</a>
-        <a href="/video-work.html">Video Work</a>
+        <a href="angelanportfolioo/graphic-design.html">Graphic Design</a>
+        <a href="angelanportfolioo/digital-illustrations.html">Illustrations</a>
+        <a href="angelanportfolioo/video-work.html">Video Work</a>
       </div>
     </div>
 
@@ -214,11 +214,11 @@
   <!-- Mobile Menu Toggle -->
   <input type="checkbox" id="menu-toggle" />
   <div class="mobile-menu">
-    <a href="/index.html">Home</a>
-    <a href="/graphic-design.html">Graphic Design</a>
-    <a href="/digital-illustrations.html">Illustrations</a>
-    <a href="/video-work.html">Video Work</a>
-    <a href="contactme.html">Contact Me</a>
+    <a href="angelanportfolioo/index.html">Home</a>
+    <a href="angelanportfolioo/graphic-design.html">Graphic Design</a>
+    <a href="angelanportfolioo/digital-illustrations.html">Illustrations</a>
+    <a href="angelanportfolioo/video-work.html">Video Work</a>
+    <a href="angelanportfolioo/contactme.html">Contact Me</a>
   </div>
 </nav>
 
