--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
   <!-- Right side -->
   <div class="nav-right">
     <!-- Make logo alone handle the click -->
-    <div class="namelogo-right" onclick="window.location.href='/index.html'">
+    <div class="namelogo-right" onclick="window.location.href='angelanportfolioo/index.html'">
       <img src="logo/name_logo.png" alt="Angelan logo">
     </div>
 
