--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     </div>
 
     <!-- Contact Me Link -->
-    <a href="angelanportfolioo/contactme.html" class="nav-btn">Contact Me</a>
+    <a href="index.html/contactme.html" class="nav-btn">Contact Me</a>
   </div>
 
   <!-- Right side -->
