--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     <div class="dropdown">
       <button class="dropbtn">Work</button>
       <div class="dropdown-content">
-        <a href="graphic-design.html">Graphic Design</a>
+        <a href="angelanportfolioo/graphic-design.html">Graphic Design</a>
         <a href="angelanportfolioo/digital-illustrations.html">Illustrations</a>
         <a href="angelanportfolioo/video-work.html">Video Work</a>
       </div>
