--- a/digital-illustrations.html
+++ b/digital-illustrations.html
@@ -264,20 +264,20 @@
     <div class="dropdown">
       <button class="dropbtn">Work</button>
       <div class="dropdown-content">
-        <a href="/graphic-design.html">Graphic Design</a>
-        <a href="/digital-illustrations.html">Illustrations</a>
-        <a href="/video-work.html">Video Work</a>
+        <a href="angelanportfolioo/graphic-design.html">Graphic Design</a>
+        <a href="angelanportfolioo/digital-illustrations.html">Illustrations</a>
+        <a href="angelanportfolioo/video-work.html">Video Work</a>
       </div>
     </div>
 
     <!-- Contact Me Link -->
-    <a href="/contactme.html" class="nav-btn">Contact Me</a>
+    <a href="angelanportfolioo/contactme.html" class="nav-btn">Contact Me</a>
   </div>
 
   <!-- Right side -->
   <div class="nav-right">
     <!-- Make logo alone handle the click -->
-    <div class="namelogo-right" onclick="window.location.href='/index.html'">
+    <div class="namelogo-right" onclick="window.location.href='angelanportfolioo/index.html'">
       <img src="logo/name_logo.png" alt="Angelan logo">
     </div>
 
@@ -288,11 +288,11 @@
   <!-- Mobile Menu Toggle -->
   <input type="checkbox" id="menu-toggle" />
   <div class="mobile-menu">
-    <a href="/index.html">Home</a>
-    <a href="/graphic-design.html">Graphic Design</a>
-    <a href="/digital-illustrations.html">Illustrations</a>
-    <a href="/video-work.html">Video Work</a>
-    <a href="/contactme.html">Contact Me</a>
+    <a href="angelanportfolioo/index.html">Home</a>
+    <a href="angelanportfolioo/graphic-design.html">Graphic Design</a>
+    <a href="angelanportfolioo/digital-illustrations.html">Illustrations</a>
+    <a href="angelanportfolioo/video-work.html">Video Work</a>
+    <a href="angelanportfolioo/contactme.html">Contact Me</a>
   </div>
 </nav>
 
