--- a/index.html
+++ b/index.html
@@ -191,13 +191,13 @@
       <button class="dropbtn">Work</button>
       <div class="dropdown-content">
         <a href="graphic-design.html">Graphic Design</a>
-        <a href="angelanportfolioo/digital-illustrations.html">Illustrations</a>
-        <a href="angelanportfolioo/video-work.html">Video Work</a>
+        <a href="digital-illustrations.html">Illustrations</a>
+        <a href="video-work.html">Video Work</a>
       </div>
     </div>
 
     <!-- Contact Me Link -->
-    <a href="angelanportfolioo/contactme.html" class="nav-btn">Contact Me</a>
+    <a href="contactme.html" class="nav-btn">Contact Me</a>
   </div>
 
   <!-- Right side -->
