--- a/index.html
+++ b/index.html
@@ -190,9 +190,9 @@
     <div class="dropdown">
       <button class="dropbtn">Work</button>
       <div class="dropdown-content">
-        <a href="angelanportfolioo/graphic-design.html"> class="nav-btn" >Graphic Design</a>
-        <a href="angelanportfolioo/digital-illustrations.html"> class="nav-btn" >Illustrations</a>
-        <a href="angelanportfolioo/video-work.html"> class="nav-btn">Video Work</a>
+        <a href="angelanportfolioo/graphic-design.html"> Graphic Design</a>
+        <a href="angelanportfolioo/digital-illustrations.html" >Illustrations</a>
+        <a href="angelanportfolioo/video-work.html">Video Work</a>
       </div>
     </div>
 
