--- a/contactme.html
+++ b/contactme.html
@@ -157,9 +157,9 @@
     <div class="dropdown">
       <button class="dropbtn">Work</button>
       <div class="dropdown-content">
-        <a href="/graphic-design.html">Graphic Design</a>
-        <a href="/digital-illustrations.html">Illustrations</a>
-        <a href="/video-work.html">Video Work</a>
+        <a href="graphic-design.html">Graphic Design</a>
+        <a href="digital-illustrations.html">Illustrations</a>
+        <a href="video-work.html">Video Work</a>
       </div>
     </div>
 
