--- a/index.html
+++ b/index.html
@@ -189,14 +189,14 @@
     <div class="dropdown">
       <button class="dropbtn">Work</button>
       <div class="dropdown-content">
-        <a href="/graphic-design.html">Graphic Design</a>
+        <a href="angelanportfolioo/graphic-design.html">Graphic Design</a>
         <a href="/digital-illustrations.html">Illustrations</a>
         <a href="/video-work.html">Video Work</a>
       </div>
     </div>
 
     <!-- Contact Me Link -->
-    <a href="/angelanportfolioo/contactme.html" class="nav-btn">Contact Me</a>
+    <a href="angelanportfolioo/contactme.html" class="nav-btn">Contact Me</a>
   </div>
 
   <!-- Right side -->
