--- a/index.html
+++ b/index.html
@@ -190,13 +190,13 @@
       <button class="dropbtn">Work</button>
       <div class="dropdown-content">
         <a href="graphic-design.html">Graphic Design</a>
-        <a href="/digital-illustrations.html">Illustrations</a>
-        <a href="/video-work.html">Video Work</a>
+        <a href="digital-illustrations.html">Illustrations</a>
+        <a href="video-work.html">Video Work</a>
       </div>
     </div>
 
     <!-- Contact Me Link -->
-    <a href="angelanportfolioo/contactme.html" class="nav-btn">Contact Me</a>
+    <a href="contactme.html" class="nav-btn">Contact Me</a>
   </div>
 
   <!-- Right side -->
@@ -213,11 +213,11 @@
   <!-- Mobile Menu Toggle -->
   <input type="checkbox" id="menu-toggle" />
   <div class="mobile-menu">
-    <a href="/index.html">Home</a>
-    <a href="/graphic-design.html">Graphic Design</a>
-    <a href="/digital-illustrations.html">Illustrations</a>
-    <a href="/video-work.html">Video Work</a>
-    <a href="/contactme.html">Contact Me</a>
+    <a href="index.html">Home</a>
+    <a href="graphic-design.html">Graphic Design</a>
+    <a href="digital-illustrations.html">Illustrations</a>
+    <a href="video-work.html">Video Work</a>
+    <a href="contactme.html">Contact Me</a>
   </div>
 </nav>
   
