--- a/index.html
+++ b/index.html
@@ -213,11 +213,11 @@
   <!-- Mobile Menu Toggle -->
   <input type="checkbox" id="menu-toggle" />
   <div class="mobile-menu">
-    <a href="index.html">Home</a>
-    <a href="graphic-design.html">Graphic Design</a>
-    <a href="digital-illustrations.html">Illustrations</a>
-    <a href="video-work.html">Video Work</a>
-    <a href="contactme.html">Contact Me</a>
+    <a href="./index.html">Home</a>
+    <a href="./graphic-design.html">Graphic Design</a>
+    <a href="./digital-illustrations.html">Illustrations</a>
+    <a href="./video-work.html">Video Work</a>
+    <a href="./contactme.html">Contact Me</a>
   </div>
 </nav>
   
