--- a/video-work.html
+++ b/video-work.html
@@ -97,14 +97,14 @@
     <div class="dropdown">
       <button class="dropbtn">Work</button>
       <div class="dropdown-content">
-        <a href="/graphic-design.html">Graphic Design</a>
-        <a href="/digital-illustrations.html">Illustrations</a>
-        <a href="/video-work.html">Video Work</a>
+        <a href="./graphic-design.html">Graphic Design</a>
+        <a href="./digital-illustrations.html">Illustrations</a>
+        <a href="./video-work.html">Video Work</a>
       </div>
     </div>
 
     <!-- Contact Me Link -->
-    <a href="/contactme.html" class="nav-btn">Contact Me</a>
+    <a href="./contactme.html" class="nav-btn">Contact Me</a>
   </div>
 
   <!-- Right side -->
@@ -121,14 +121,21 @@
   <!-- Mobile Menu Toggle -->
   <input type="checkbox" id="menu-toggle" />
   <div class="mobile-menu">
-    <a href="/index.html">Home</a>
-    <a href="/graphic-design.html">Graphic Design</a>
-    <a href="/digital-illustrations.html">Illustrations</a>
-    <a href="/video-work.html">Video Work</a>
-    <a href="/contactme.html">Contact Me</a>
+    <a href="./index.html">Home</a>
+    <a href="./graphic-design.html">Graphic Design</a>
+    <a href="./digital-illustrations.html">Illustrations</a>
+    <a href="./video-work.html">Video Work</a>
+    <a href="./contactme.html">Contact Me</a>
   </div>
 </nav>
-
+  
+<div class="inline-video-section slide-up delay-2">
+  <video id="myVideo" muted autoplay playsinline>
+    <!-- Default video source (for desktop) -->
+    <source id="videoSource" src="logo/H_homepage.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+</div>
 
 
   <!-- Header -->
