--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 <div class="inline-video-section slide-up delay-2">
   <video id="myVideo" muted autoplay playsinline>
     <!-- Default video source (for desktop) -->
-    <source id="videoSource" src="logo/H_homepage.mp4" type="video/mp4">
+    <source id="videoSource" src="./logo/H_homepage.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 </div>
