--- a/contactme.html
+++ b/contactme.html
@@ -157,20 +157,20 @@
     <div class="dropdown">
       <button class="dropbtn">Work</button>
       <div class="dropdown-content">
-        <a href="/angelanportfolioo/graphic-design.html">Graphic Design</a>
-        <a href="digital-illustrations.html">Illustrations</a>
-        <a href="video-work.html">Video Work</a>
+        <a href="./graphic-design.html">Graphic Design</a>
+        <a href="./digital-illustrations.html">Illustrations</a>
+        <a href="./video-work.html">Video Work</a>
       </div>
     </div>
 
     <!-- Contact Me Link -->
-    <a href="/contactme.html" class="nav-btn">Contact Me</a>
+    <a href="./contactme.html" class="nav-btn">Contact Me</a>
   </div>
 
   <!-- Right side -->
   <div class="nav-right">
     <!-- Make logo alone handle the click -->
-    <div class="namelogo-right" onclick="window.location.href='/index.html'">
+    <div class="namelogo-right" onclick="window.location.href='./index.html'">
       <img src="logo/name_logo.png" alt="Angelan logo">
     </div>
 
@@ -181,16 +181,13 @@
   <!-- Mobile Menu Toggle -->
   <input type="checkbox" id="menu-toggle" />
   <div class="mobile-menu">
-    <a href="/index.html">Home</a>
-    <a href="/graphic-design.html">Graphic Design</a>
-    <a href="/digital-illustrations.html">Illustrations</a>
-    <a href="/video-work.html">Video Work</a>
-    <a href="/contactme.html">Contact Me</a>
+    <a href="./index.html">Home</a>
+    <a href="./graphic-design.html">Graphic Design</a>
+    <a href="./digital-illustrations.html">Illustrations</a>
+    <a href="./video-work.html">Video Work</a>
+    <a href="./contactme.html">Contact Me</a>
   </div>
 </nav>
-
-
-  
 
     <!-- Main Content -->
     <h1>Hello, get to know me!</h1>
