--- a/digital-illustrations.html
+++ b/digital-illustrations.html
@@ -276,7 +276,7 @@
   <!-- Right side -->
   <div class="nav-right">
     <!-- Make logo alone handle the click -->
-    <div class="namelogo-right" onclick="window.location.href='/index.html'">
+    <div class="namelogo-right" onclick="window.location.href='./index.html'">
       <img src="logo/name_logo.png" alt="Angelan logo">
     </div>
 
