--- a/digital-illustrations.html
+++ b/digital-illustrations.html
@@ -275,9 +275,9 @@
 
     <!-- Right side -->
   <div class="nav-right">
-    <!-- Make logo alone handle the click -->
-    <div class="namelogo-right" onclick="window.location.href='./index.html'">
-      <img src="logo/name_logo.png" alt="Angelan logo">
+   <a href="./index.html" class="namelogo-right">
+  <img src="logo/name_logo.png" alt="Angelan logo">
+</a>
     </div>
 
     <!-- Hamburger menu toggle -->
