--- a/digital-illustrations.html
+++ b/digital-illustrations.html
@@ -273,11 +273,11 @@
     <a href="./contactme.html" class="nav-btn">Contact Me</a>
   </div>
 
-    <!-- Right side -->
+ <!-- Right side -->
   <div class="nav-right">
-   <a href="./index.html" class="namelogo-right">
-  <img src="logo/name_logo.png" alt="Angelan logo">
-</a>
+    <!-- Make logo alone handle the click -->
+    <div class="namelogo-right" onclick="window.location.href='./index.html'">
+      <img src="logo/name_logo.png" alt="Angelan logo">
     </div>
 
     <!-- Hamburger menu toggle -->
