--- a/index.html
+++ b/index.html
@@ -239,19 +239,19 @@
   <!-- Image Buttons -->
   <div class="image-button-container slide-up delay-4">
     <div class="image-button">
-      <a href="/graphic-design.html">
+      <a href="./graphic-design.html">
         <img src="large icons/gd_icon.png" alt="Graphic Design">
         <div class="overlay">Graphic Design</div>
       </a>
     </div>
     <div class="image-button">
-      <a href="/digital-illustrations.html">
+      <a href="./digital-illustrations.html">
         <img src="large icons/digiillus_icon.png" alt="Illustration">
         <div class="overlay">Illustration</div>
       </a>
     </div>
     <div class="image-button">
-      <a href="/video-work.html">
+      <a href="./video-work.html">
         <img src="large icons/videowork_icon.png" alt="Video Work">
         <div class="overlay">Video Work</div>
       </a>
