--- a/video-work.html
+++ b/video-work.html
@@ -138,8 +138,8 @@
   <!-- Main Content -->
   <div class="main-content">
     <div class="video-section slide-up">
-          <video controls poster="video work/stopmotion_thumbnail.png">
-          <source src="video work/stopmotion.mp4" type="video/mp4">
+          <video controls poster="./videowork/stopmotion_thumbnail.png">
+          <source src="./videowork/stopmotion.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
       </div>
@@ -150,8 +150,8 @@
         </p> 
     </div>
     <div class="video-section slide-up">
-      <video controls poster="video work/whattowear_thumbnail.png">
-          <source src="video work/what2wear.mp4" type="video/mp4">
+      <video controls poster="./videowork/whattowear_thumbnail.png">
+          <source src="./videowork/what2wear.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
       </div>
@@ -162,8 +162,8 @@
         </p> 
     </div>
     <div class="video-section slide-up">
-      <video controls poster="video work/wheredidallthetimego_thumbnail.png">
-          <source src="video work/wheredidallthetimego.mp4" type="video/mp4">
+      <video controls poster="./videowork/wheredidallthetimego_thumbnail.png">
+          <source src="./videowork/wheredidallthetimego.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
       </div>
@@ -175,7 +175,7 @@
     </div> 
     <div class="video-section slide-up">
       <video controls poster="video work/jellyfishanimation_thumbnail.png">
-        <source src="video work/jellyfishtears.MP4" type="video/mp4">
+        <source src="./videowork/jellyfishtears.MP4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
     </div>
