--- a/video-work.html
+++ b/video-work.html
@@ -139,7 +139,7 @@
   <div class="main-content">
     <div class="video-section slide-up">
           <video controls poster="./videowork/stopmotion_thumbnail.png">
-          <source src="./videowork/stopmotion.mp4" type="video/mp4">
+          <source src="videowork/stopmotion.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
       </div>
