--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 </nav>
   
 <div class="inline-video-section slide-up delay-2">
-  <img src="./logo/L_homepage.gif"/>
+  <img src="./logo/L_homepage.gif" width=100vh/>
 </div>
 
 
