--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
       background-color: #C7E6FF;
       margin-top: 40px;
     }
-
+.inline-video-section img{
+  width:100%;
+}
     .image-button {
       position: relative;
       width: 350px;
@@ -222,7 +224,7 @@
 </nav>
   
 <div class="inline-video-section slide-up delay-2">
-  <img src="./logo/L_homepage.gif" width=100vh/>
+  <img src="./logo/L_homepage.gif"/>
 </div>
 
 
