--- a/video-work.html
+++ b/video-work.html
@@ -38,6 +38,23 @@
       width: 100%;
       border-radius: 8px;
     }
+    .video-wrapper {
+      position: relative;
+      padding-bottom: 56.25%; /* 16:9 aspect ratio */
+      height: 0;
+      overflow: hidden;
+      border-radius: 8px;
+    }
+
+.video-wrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
+
 
         /* ========== RESPONSIVE DESIGN ========== */
     /* For devices with max width 1024px (tablets) */
@@ -136,6 +153,16 @@
   </header>
 
   <!-- Main Content -->
+  <div class="video-wrapper">
+  <iframe
+    src="https://www.youtube.com/embed/dQw4w9WgXcQ"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowfullscreen>
+  </iframe>
+</div>
+
   <div class="main-content">
     <div class="video-section slide-up">
           <video controls poster="./videowork/stopmotion_thumbnail.png">
