--- a/video-work.html
+++ b/video-work.html
@@ -155,7 +155,7 @@
   <!-- Main Content -->
   <div class="video-wrapper">
   <iframe
-    src="https://www.youtube.com/embed/dQw4w9WgXcQ"
+    src="https://youtu.be/UawYUpbgtkI"
     title="YouTube video player"
     frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
