--- a/video-work.html
+++ b/video-work.html
@@ -152,16 +152,18 @@
     <h3>With the use of various kinds of animation and videography, I want to capture mundane moments and empower the normal. Click below to watch my videos!</h3>
   </header>
 
-  <!-- Main Content -->
+  <div class="video-section slide-up">
   <div class="video-wrapper">
-  <iframe
-    src="https://youtu.be/UawYUpbgtkI"
-    title="YouTube video player"
-    frameborder="0"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-    allowfullscreen>
-  </iframe>
+    <iframe
+      src="https://www.youtube.com/embed/UawYUpbgtkI"
+      title="YouTube video player"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      allowfullscreen>
+    </iframe>
+  </div>
 </div>
+
 
   <div class="main-content">
     <div class="video-section slide-up">
