--- a/video-work.html
+++ b/video-work.html
@@ -9,42 +9,41 @@
   <link rel="stylesheet" href="style.css">
 
   <style>
+/* Main container for video + description */
+.h2 {
+  line-height: 80%;
+}
 
+.main-content {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 40px;
+  max-width: 1200px;
+  margin: auto;
+  flex-wrap: wrap;
+}
 
-    /* Main container for video + description */
-    .h2{
-    line-height: 80% ;
-    }
+.video-section,
+.description-section {
+  flex: 1 1 45%;
+  background-color: #fff;
+}
 
-    .main-content {
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-      gap: 40px;
-      max-width: 1200px;
-      margin: auto;
-      flex-wrap: wrap;
-    }
+video {
+  width: 100%;
+  border-radius: 8px;
+}
 
-    .video-section,
-    .description-section {
-      flex: 1 1 45%;
-      background-color: #fff;
-      
-  
-    }
-
-    video {
-      width: 100%;
-      border-radius: 8px;
-    }
-    .video-wrapper {
-      position: relative;
-      padding-bottom: 56.25%; /* 16:9 aspect ratio */
-      height: 0;
-      overflow: hidden;
-      border-radius: 8px;
-    }
+.video-wrapper {
+  position: relative;
+  width: 100%;  /* Ensure the wrapper takes full width */
+  padding-bottom: 56.25%; /* 16:9 aspect ratio */
+  height: 0;
+  overflow: hidden;
+  border-radius: 8px;
+  margin-bottom: 20px; /* Space between video and description */
+}
 
 .video-wrapper iframe {
   position: absolute;
@@ -53,57 +52,102 @@
   width: 100%;
   height: 100%;
   border: 0;
+  visibility: visible;
+  display: block;
 }
 
+/* ========== RESPONSIVE DESIGN ========== */
 
-        /* ========== RESPONSIVE DESIGN ========== */
-    /* For devices with max width 1024px (tablets) */
-    @media (max-width: 1024px) {
-      .main-content {
-        flex-direction: column; /* Stack video and description vertically */
-        gap: 20px;
-      }
+/* For devices with max width 1024px (tablets) */
+@media (max-width: 1024px) {
+  .main-content {
+    flex-direction: column; /* Stack video and description vertically */
+    gap: 20px;
+  }
 
-      .video-section, .description-section {
-        flex: 1 1 100%; /* Make both sections take up full width */
-      }
+  .video-section, .description-section {
+    flex: 1 1 100%; /* Make both sections take up full width */
+    padding: 10px;
+  }
 
-    }
+  .description-section h2 {
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+  }
 
-    /* For devices with max width 768px (small tablets and large phones) */
-    @media (max-width: 768px) {
-      .main-content {
-        flex-direction: column; /* Stack video and description vertically */
-        gap: 15px;
-      }
+  .description-section p {
+    font-size: 1rem;
+  }
 
-      .video-section, .description-section {
-        flex: 1 1 100%;
-        padding: 10px ;
-      }
+  /* Adjust iframe video size for tablets */
+  .video-wrapper iframe {
+    width: 100%; /* Ensure iframe takes full width */
+    height: auto; /* Maintain aspect ratio */
+  }
+}
 
+/* For devices with max width 768px (small tablets and large phones) */
+@media (max-width: 768px) {
+  .main-content {
+    flex-direction: column; /* Stack video and description vertically */
+    gap: 15px;
+  }
 
-      .description-section h2 {
-        font-size: 1.4rem;
-      }
+  .video-section, .description-section {
+    flex: 1 1 100%;
+    padding: 15px;
+  }
 
-      .description-section p {
-        font-size: 0.9rem;
-      }
-    }
+  .description-section h2 {
+    font-size: 1.4rem;
+    margin-bottom: 10px;
+  }
 
-    /* For devices with max width 480px (phones) */
-    @media (max-width: 480px) {
-      .main-content {
-        gap: 10px; /* Reduce gap for phones */
-      }
+  .description-section p {
+    font-size: 0.95rem;
+  }
 
-      video {
-        width: 100%;
-        padding: 5px ;
-      }
-    }
-  
+  /* Ensure iframe scales properly */
+  .video-wrapper iframe {
+    width: 100%;
+    height: 100%; /* Ensure the iframe height is proportionate */
+  }
+}
+
+/* For devices with max width 480px (phones) */
+@media (max-width: 480px) {
+  .main-content {
+    gap: 10px;
+    padding: 5px;
+  }
+
+  .video-section, .description-section {
+    flex: 1 1 100%;
+    padding: 10px;
+  }
+
+  .description-section h2 {
+    font-size: 1.2rem;
+  }
+
+  .description-section p {
+    font-size: 0.9rem;
+  }
+
+  /* Ensure the video iframe scales properly */
+  .video-wrapper {
+    padding-bottom: 56.25%; /* Maintain aspect ratio */
+    height: 0;
+    overflow: hidden;
+    border-radius: 8px;
+  }
+
+  .video-wrapper iframe {
+    width: 100%; /* Make iframe responsive */
+    height: auto; /* Allow automatic height adjustment */
+  }
+}
+
   </style>
 </head>
 
@@ -152,69 +196,78 @@
     <h3>With the use of various kinds of animation and videography, I want to capture mundane moments and empower the normal. Click below to watch my videos!</h3>
   </header>
 
+<div class="main-content">
   <div class="video-section slide-up">
-  <div class="video-wrapper">
-    <iframe
-      src="https://www.youtube.com/embed/UawYUpbgtkI"
-      title="YouTube video player"
-      frameborder="0"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-      allowfullscreen>
-    </iframe>
+    <div class="video-wrapper">
+      <iframe
+        src="https://www.youtube.com/embed/BCVzhi6vuso"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen>
+      </iframe>
+    </div>
   </div>
-</div>
-
-
-  <div class="main-content">
+  <div class="description-section slide-up">
+    <h2>Chicago</h2>
+    <p>
+      This film was made using stop motion and Adobe Premiere Pro. Capturing a weekend at home away from college during freshmen year, infused me with nostalgia for something well known amongst the changes I was experiencing.
+    </p> 
+  </div>
     <div class="video-section slide-up">
-          <video controls poster="./videowork/stopmotion_thumbnail.png">
-          <source src="videowork/stopmotion.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
+      <div class="video-wrapper">
+        <iframe
+          src="https://www.youtube.com/embed/UawYUpbgtkI"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen>
+        </iframe>
       </div>
-      <div class="description-section slide-up">
-        <h2>Chicago</h2>
-        <p>
-          This film was made using stop motion and Adobe Premiere Pro. Capturing a weekend at home away from college during  freshman year, infused me with nostalgia for something well known amongst the changes I was experiencing. 
-        </p> 
     </div>
-    <div class="video-section slide-up">
-      <video controls poster="./videowork/whattowear_thumbnail.png">
-          <source src="./videowork/what2wear.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
-      </div>
-      <div class="description-section slide-up">
-        <h2>What 2 Wear?</h2>
-        <p>
-          Fashion and self expression are linked to identity. The unlimited choices in the closet fulfill a sense of reassurance that art is both within me and depicted outside of me as well. The use of both illustration and video editing capture how multi-facted art is in life.
-        </p> 
+    <div class="description-section slide-up">
+      <h2>What 2 Wear?</h2>
+      <p>
+        Fashion and self expression are linked to identity. The unlimited choices in the closet fulfill a sense of reassurance that art is both within me and depicted outside of me as well. The use of both illustration and video editing capture how multi-facted art is in life.
+      </p> 
     </div>
-    <div class="video-section slide-up">
-      <video controls poster="./videowork/wheredidallthetimego_thumbnail.png">
-          <source src="./videowork/wheredidallthetimego.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
+      <div class="video-section slide-up">
+        <div class="video-wrapper">
+          <iframe
+            src="https://www.youtube.com/embed/BvMhWu9dyoY"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen>
+          </iframe>
+        </div>
       </div>
       <div class="description-section slide-up">
         <h2>Where did all the time go?</h2>
         <p>
-        This video project is an accumlation of all the projects in freshmen year. Although the change was scary intially, over time, growth and self discovery were able to be captured through meaningful relationships and creative expression.
+          This video project is an accumulation of all the projects in freshmen year. Although the change was scary intially, over time, growth and self discovery were able to be captured through meaningful relationships and creative expression.
         </p> 
-    </div> 
-    <div class="video-section slide-up">
-      <video controls poster="video work/jellyfishanimation_thumbnail.png">
-        <source src="./videowork/jellyfishtears.MP4" type="video/mp4">
-        Your browser does not support the video tag.
-      </video>
-    </div>
-    <div class="description-section slide-up">
-      <h2>Jellyfish Tears</h2>
-      <p>
-      This video project is an accumlation of all the projects in freshmen year. Although the change was scary intially, over time, growth and self discovery were able to be captured through meaningful relationships and creative expression.
-      </p> 
-  </div> 
-</div>
+      </div>
+        <div class="video-section slide-up">
+          <div class="video-wrapper">
+            <iframe
+              src="https://www.youtube.com/embed/9ZaQp5Ps9pY"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen>
+            </iframe>
+          </div>
+        </div>
+        <div class="description-section slide-up">
+          <h2>Jellyfish Tears</h2>
+          <p>
+            Jellyfish tears reflects the emotional enlightening through use of animation and self portraiture. The dynamic flow of the tears turning into jellyfish illustrates the process of confronting your emotions after a period of stagnant emotions.
+          </p> 
+        </div>
+
+
+
   <button id="backToTop" title="Go to top">
     <i class="fas fa-arrow-up"></i>
   </button>
