--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
       
       // Check screen width and swap video source accordingly
       if (window.innerWidth <= 480) {
-        videoSource.src = 'logo/L_homepage.mp4'; // Mobile-specific video
+        videoSource.src = 'logo/P_homepage.mp4'; // Mobile-specific video
       } else {
         videoSource.src = 'logo/H_homepage.mp4'; // Desktop-specific video
       }
