--- a/index.html
+++ b/index.html
@@ -305,9 +305,9 @@
       
       // Check screen width and swap video source accordingly
       if (window.innerWidth <= 480) {
-        videoSource.src = 'logo/P_homepage.mp4'; // Mobile-specific video
+        videoSource.src = 'logo/P_homepage.gif'; // Mobile-specific video
       } else {
-        videoSource.src = 'logo/H_homepage.mp4'; // Desktop-specific video
+        videoSource.src = 'logo/H_homepage.gif'; // Desktop-specific video
       }
 
       // Reload the video with the new source
