--- a/index.html
+++ b/index.html
@@ -227,6 +227,14 @@
   <img src="./logo/L_homepage.gif"/>
 </div>
 
+  <picture>
+  <!-- Mobile first: screens up to 480px -->
+  <source srcset="./logo/P_homepage.gif" media="(max-width: 480px)">
+  
+  <!-- Fallback/default for larger screens -->
+  <img src="./logo/L_homepage.gif" alt="Homepage Animation">
+</picture>
+
 
   <!-- Logo and Speech Bubble -->
   <div class="logo-container slide-up delay-3" id="logoSection">
