--- a/index.html
+++ b/index.html
@@ -224,12 +224,11 @@
 </nav>
   
 <div class="inline-video-section slide-up delay-2">
-  <img src="./logo/L_homepage.gif"/>
+  <picture>
+    <source srcset="./logo/P_homepage.gif" media="(max-width: 480px)">
+    <img src="./logo/L_homepage.gif" alt="Homepage Animation">
+  </picture>
 </div>
-  
-  <!-- Fallback/default for larger screens -->
-  <img src="./logo/L_homepage.gif" alt="Homepage Animation">
-</picture>
 
 
   <!-- Logo and Speech Bubble -->
