--- a/graphic-design.html
+++ b/graphic-design.html
@@ -425,7 +425,7 @@ images: ["graphicdesign/chinese or american poster copy/are you chinese or ameri
 {
 title: "Dangolin Typeface",
 description: "Dangolin is a typeface designed after a trip to Osaka in the Summer of 2024. The contrast of serifs and bubble letters are based on the variety of experiences had in Osaka. The pastel colors are based on the Japanese sweet, dango. Creating both a type specimen book and poster was able to fully display the details in the typeface.",
-images: ["graphicdesign/type/mockups/backandfrontmockup copy.png","graphicdesign/type/mockups/wholetypemockup.png", "graphicdesign/type/specimen book spreads/dangolin_1.png", "graphicdesign/type/specimen book spreads/dangolin_2.png","graphicdesign/type/specimen book spreads/dangolin_3.png","graphicdesign/type/dangolinpostermockup copy.png","graphicdesign/type/typeposter_1.png","graphicdesign/type/postersketch.png"]
+images: ["graphicdesign/type/mockups/backandfrontmockup copy.png", {iframe:"https://publuu.com/flip-book/864425/1906249/page/1?embed&transparent"},"graphicdesign/type/dangolinpostermockup copy.png","graphicdesign/type/typeposter_1.png","graphicdesign/type/postersketch.png"]
 },
 {
 title: "Food Business Ads",
@@ -446,7 +446,7 @@ images: ["graphicdesign/499/calenderbgedited.png","graphicdesign/499/wholecalend
 {
 title: "J6 Rebranding",
 description: "J6 is a bunsik styled Korean resturant in the CU area. Rebranding J6 with an iconic and authentic logo and food magazine allows their customer base to better recognize their afforable favorite spot. Various stages of brainstorming was able to further the expectations of each step of the process.",
-images: ["graphicdesign/j6/foodzine.png",{iframe:"https://publuu.com/flip-book/864425/1903508/page/1?embed"},"graphicdesign/j6/j6finallogo.png","graphicdesign/j6/j6sketches.png","graphicdesign/j6/j6brainstorm.png","graphicdesign/j6/j6stylesheet.png"]
+images: ["graphicdesign/j6/foodzine.png",{iframe:"https://publuu.com/flip-book/864425/1903508/page/1?embed&transparent"},"graphicdesign/j6/j6finallogo.png","graphicdesign/j6/j6sketches.png","graphicdesign/j6/j6brainstorm.png","graphicdesign/j6/j6stylesheet.png"]
 }
 
 ];
