--- a/graphic-design.html
+++ b/graphic-design.html
@@ -602,6 +602,20 @@ window.onscroll = function() {
 backToTopButton.onclick = function() {
     window.scrollTo({ top: 0, behavior: 'smooth' });
 };
+
+function makeIframeFullscreen() {
+  const iframe = document.getElementById('flipbookIframe');
+  if (iframe.requestFullscreen) {
+    iframe.requestFullscreen();
+  } else if (iframe.webkitRequestFullscreen) {
+    iframe.webkitRequestFullscreen();
+  } else if (iframe.mozRequestFullScreen) {
+    iframe.mozRequestFullScreen();
+  } else if (iframe.msRequestFullscreen) {
+    iframe.msRequestFullscreen();
+  }
+}
+
 </script>
 </body>
 </html>
