--- a/graphic-design.html
+++ b/graphic-design.html
@@ -605,6 +605,12 @@ window.onscroll = function() {
 backToTopButton.onclick = function() {
     window.scrollTo({ top: 0, behavior: 'smooth' });
 };
+
+var iframe = document.querySelector('iframe');
+var requestFullscreen = iframe.requestFullscreen || iframe.mozRequestFullScreen || iframe.webkitRequestFullscreen || iframe.msRequestFullscreen;
+if (requestFullscreen) {
+    requestFullscreen.call(iframe);
+}
 </script>
 </body>
 </html>
