--- a/graphic-design.html
+++ b/graphic-design.html
@@ -103,6 +103,11 @@
             overflow: hidden;
             height: 100%;
         }
+        .modal iframe {
+          width: 100%;
+          height: 100%;
+          border: none;
+        }
 
         .img-visible {
             visibility: visible !important;
