--- a/graphic-design.html
+++ b/graphic-design.html
@@ -103,11 +103,6 @@
             overflow: hidden;
             height: 100%;
         }
-        .modal iframe {
-          width: 100%;
-          height: 100%;
-          border: none;
-        }
 
         .img-visible {
             visibility: visible !important;
@@ -514,11 +509,7 @@ function updateModal(data, slideIndex, direction = null) {
         iframe.width = "100%";
         iframe.height = "100%";
         iframe.style.border = "none";
-     iframe.setAttribute("allowfullscreen", "");
-iframe.setAttribute("webkitallowfullscreen", "");
-iframe.setAttribute("mozallowfullscreen", "");
-
-
+        iframe.setAttribute("allow", "clipboard-write; autoplay; fullscreen");
         iframe.id = "modalIframe";
         iframe.style.borderRadius = "8px";
         spinner.style.display = 'none';
@@ -611,7 +602,6 @@ window.onscroll = function() {
 backToTopButton.onclick = function() {
     window.scrollTo({ top: 0, behavior: 'smooth' });
 };
-
 </script>
 </body>
 </html>
