--- a/graphic-design.html
+++ b/graphic-design.html
@@ -449,7 +449,7 @@ images: ["graphicdesign/j6/foodzine.png",iframe: "https://www.flipbookpdf.net/we
 }
 
 ];
-
+<script>
 let currentIndex = 0;
 let currentSlide = 0;
 let zoomed = false;
