--- a/graphic-design.html
+++ b/graphic-design.html
@@ -25,6 +25,7 @@
             height: fit-content;
             width: 400px;
             cursor: pointer;
+            overflow: hidden;
             min-height: 400px; /* or match the height of your images */
         }
 
@@ -404,8 +405,7 @@
   <button id="backToTop" title="Go to top">
   <i class="fas fa-arrow-up"></i>
 </button>
-
-<script>
+    <script>
 const modal = document.getElementById('modal');
 const modalImg = document.getElementById('modalImage');
 const modalDesc = document.getElementById('modalDescription');
@@ -446,7 +446,7 @@ images: ["graphicdesign/499/calenderbgedited.png","graphicdesign/499/wholecalend
 {
 title: "J6 Rebranding",
 description: "J6 is a bunsik styled Korean resturant in the CU area. Rebranding J6 with an iconic and authentic logo and food magazine allows their customer base to better recognize their afforable favorite spot. Various stages of brainstorming was able to further the expectations of each step of the process.",
-images: ["graphicdesign/j6/foodzine.png",iframe: "https://www.flipbookpdf.net/web/site/9770d74cf7eba3120c8f406a68e9969a84ff9d8b202505.pdf.html","graphicdesign/j6/j6finallogo.png","graphicdesign/j6/j6sketches.png","graphicdesign/j6/j6brainstorm.png","graphicdesign/j6/j6stylesheet.png"]
+images: ["graphicdesign/j6/foodzine.png",{iframe: "https://www.flipbookpdf.net/web/site/9770d74cf7eba3120c8f406a68e9969a84ff9d8b202505.pdf.html"},"graphicdesign/j6/j6finallogo.png","graphicdesign/j6/j6sketches.png","graphicdesign/j6/j6brainstorm.png","graphicdesign/j6/j6stylesheet.png"]
 }
 
 ];
