--- a/graphic-design.html
+++ b/graphic-design.html
@@ -425,7 +425,10 @@ images: ["graphicdesign/chinese or american poster copy/are you chinese or ameri
 {
 title: "Dangolin Typeface",
 description: "Dangolin is a typeface designed after a trip to Osaka in the Summer of 2024. The contrast of serifs and bubble letters are based on the variety of experiences had in Osaka. The pastel colors are based on the Japanese sweet, dango. Creating both a type specimen book and poster was able to fully display the details in the typeface.",
-images: ["graphicdesign/type/mockups/backandfrontmockup copy.png", {iframe: "https://www.flipbookpdf.net/web/site/b5fb3335e9695cadabae037d948d891f5160875b202505.pdf.html"},"graphicdesign/type/dangolinpostermockup copy.png","graphicdesign/type/typeposter_1.png","graphicdesign/type/postersketch.png"]
+images: [clickableImage: {
+          src: "graphicdesign/type/mockups/backandfrontmockup copy.png",
+          url: "https://www.flipbookpdf.net/web/site/b5fb3335e9695cadabae037d948d891f5160875b202505.pdf.html"
+        },"graphicdesign/type/dangolinpostermockup copy.png","graphicdesign/type/typeposter_1.png","graphicdesign/type/postersketch.png"]
 },
 {
 title: "Food Business Ads",
